Bug 251446 - Nepomuk index files and then report 0 files indexed
Summary: Nepomuk index files and then report 0 files indexed
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-16 14:35 UTC by t3ddy
Modified: 2010-11-23 17:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description t3ddy 2010-09-16 14:35:56 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

Randomly nepomuk somehow loses all its data, keeping the db size.
If I delete all nepomuk related files, and let it index all files again, at first everything works, but then, I don't know how, I get this: http://img31.imageshack.us/f/nepomuk.jpg/

Reproducible: Always

Steps to Reproduce:
Use nepomuk normally

Actual Results:  
You lose all your data

Expected Results:  
Your data are kept
Comment 1 Maxi C 2010-11-22 06:09:38 UTC
I can confirm this bug , im having exactly the same problem .

KDE 4.5.3 Kubuntu Maverick Merkat 10.10

Please address this !

Thank you
Comment 2 Sebastian Trueg 2010-11-23 14:16:21 UTC
SVN commit 1199996 by trueg:

Backport of two important fixes:
* Fixed KInotify which sometimes thought / was deleted which resulted in removal of all indexed files from the index.
* Do not delete all graphs which contain information about removed files. Instead remove the resources since the
  graphs might also contain information about other resources.

BUG: 251446


 M  +1 -0      CMakeLists.txt  
 AM            invalidfileresourcecleaner.cpp   [License: GPL (v2/3)]
 AM            invalidfileresourcecleaner.h   [License: GPL (v2/3)]
 M  +67 -45    kinotify.cpp  
 M  +2 -2      kinotify.h  
 M  +3 -0      metadatamover.cpp  
 M  +12 -68    nepomukfilewatch.cpp  
 M  +1 -1      nepomukfilewatch.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1199996
Comment 3 Maxi C 2010-11-23 17:36:27 UTC
Sebastian , thank you for fix the issue , this fix will be available in KDE 4.5.4 ?


Thanks!