Backport of two important fixes: * Fixed KInotify which sometimes thought / was deleted which resulted in removal of all indexed files from the index. * Do not delete all graphs which contain information about removed files. Instead remove the resources since the   graphs might also contain information about other resources.

BUG: 251446

svn path=/branches/KDE/4.5/kdebase/runtime/; revision=1199996